Переносит стили в sass

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,4 +1,13 @@
 @import "./utils/variables";
-@import "./base/normalize";
+/* @import "./base/normalize";*/
+
 @import "./components/page-header";
+@import "./components/logo";
 @import "./components/page-footer";
+@import "./components/hero";
+@import "./components/benefits";
+@import "./components/preview";
+@import "./components/command";
+@import "./components/clients";
+@import "./components/portfolio";
+@import "./components/modal";
