--- a/sass/components/_page-footer.scss
+++ b/sass/components/_page-footer.scss
@@ -1,3 +1,152 @@
 footer {
+  padding-top: 60px;
+  padding-bottom: 60px;
+
   background: $background-footer;
+}
+
+address {
+  margin-top: 20px;
+
+  color: $hero-title-color;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+}
+
+address > a {
+  color: $address-color;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+address a:hover,
+address a:focus {
+  color: $accent-color;
+}
+
+.mail {
+  display: block;
+  margin-top: 9px;
+  margin-bottom: 9px;
+}
+
+.footer {
+  display: flex;
+}
+
+.social-networks-footer {
+  width: 206px;
+  height: 80px;
+  margin-top: 12px;
+  margin-left: 70px;
+}
+
+.social-networks-footer p,
+.form-footer p {
+  margin-top: 0;
+  margin-bottom: 20px;
+
+  color: $hero-title-color;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+}
+
+.networks {
+  display: flex;
+}
+
+.networks-item:not(:last-child) {
+  margin-right: 10px;
+}
+
+.networks-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+
+  background-color: rgba(255, 255, 255, 0.1);
+
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.networks-icon {
+  width: 20px;
+  height: 20px;
+  fill: $hero-title-color;
+}
+
+.networks-link:hover {
+  background-color: $accent-color;
+}
+
+/* form-footer */
+
+.form-footer {
+  margin-top: 12px;
+  margin-left: auto;
+}
+
+.email-footer {
+  width: 358px;
+  height: 50px;
+  padding: 15px 16px;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  border-radius: 4px;
+
+  background: $background-footer;
+  color: $hero-title-color;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.25;
+  letter-spacing: 0.03em;
+
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+}
+
+.subscription {
+  margin: 0;
+  padding: 0;
+}
+
+.email-footer::placeholder {
+  color: rgba(255, 255, 255, 0.6);
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.25;
+  letter-spacing: 0.03em;
+}
+
+.button-form-footer {
+  display: inline-flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 200px;
+  height: 50px;
+  margin-left: 11px;
+  padding: 10px 28px 10px 28px;
+  border-radius: 4px;
+  border: none;
+
+  background-color: $accent-color;
+  color: $hero-title-color;
+  font-family: inherit;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.88;
+  letter-spacing: 0.06em;
+  cursor: pointer;
+
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
