--- a/sass/components/_page-header.scss
+++ b/sass/components/_page-header.scss
@@ -3,7 +3,7 @@ header {
   border-bottom-style: solid;
   border-bottom-color: #ececec;
 
-  background: #ffffff;
+  background: $hero-title-color;
 }
 
 .main-nav {
@@ -34,7 +34,7 @@ header {
   padding-top: 32px;
   padding-bottom: 32px;
 
-  color: var(--title-text-color);
+  color: $title-text-color;
 
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -42,7 +42,7 @@ header {
 .site-naw .link:hover,
 .site-naw .link:focus,
 .site-naw .link.current {
-  color: var(--accent-color);
+  color: $accent-color;
 }
 
 .site-naw .link.current {
@@ -60,5 +60,43 @@ header {
   height: 4px;
   border-radius: 2px;
 
-  background: var(--accent-color);
+  background: $accent-color;
+}
+
+/* contacts-header */
+
+.contacts-header {
+  display: flex;
+
+  margin-left: auto;
+
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+}
+
+.contacts-header .item + .item {
+  margin-left: 50px;
+}
+
+.contacts {
+  display: flex;
+  align-items: center;
+  padding-top: 32px;
+  padding-bottom: 32px;
+
+  color: $primary-text-color;
+
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.contacts:hover,
+.contacts:focus {
+  color: $accent-color;
+}
+
+.contacts-icon {
+  margin-right: 10px;
+  fill: currentColor;
 }
