--- a/css/main.css
+++ b/css/main.css
@@ -41,7 +41,6 @@ img {
   width: 1200px;
 }
 
-/* @import "./base/normalize";*/
 header {
   border-bottom-width: 1px;
   border-bottom-style: solid;
@@ -73,6 +72,10 @@ header {
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
+  /*font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;*/
 }
 
 .site-naw .item:not(:last-child) {
@@ -88,9 +91,7 @@ header {
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.site-naw .link:hover,
-.site-naw .link:focus,
-.site-naw .link.current {
+.site-naw .link:hover, .site-naw .link:focus, .site-naw .link.current {
   color: #2196f3;
 }
 
@@ -120,6 +121,10 @@ header {
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
+  /*font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;*/
 }
 
 .contacts-header .item + .item {
@@ -140,8 +145,7 @@ header {
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.contacts:hover,
-.contacts:focus {
+.contacts:hover, .contacts:focus {
   color: #2196f3;
 }
 
@@ -157,6 +161,10 @@ header {
   font-size: 26px;
   line-height: 1.19;
   letter-spacing: 0.03em;
+  /*font-weight: 700;
+  font-size: 26px;
+  line-height: 1.19;
+  letter-spacing: 0.03em;*/
 }
 
 .logo-header {
@@ -181,19 +189,27 @@ address {
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
+  /*font-weight: 400;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;*/
 }
 
 address > a {
   color: rgba(255, 255, 255, 0.6);
+  font-weight: 400;
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
+  /*font-weight: 400;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;*/
   -webkit-transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-address a:hover,
-address a:focus {
+address > a:hover, address > a:focus {
   color: #2196f3;
 }
 
@@ -225,6 +241,10 @@ address a:focus {
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.03em;
+  /*font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;*/
   text-transform: uppercase;
 }
 
@@ -256,14 +276,14 @@ address a:focus {
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.networks-link:hover {
+  background-color: #2196f3;
+}
+
 .networks-icon {
   width: 20px;
   height: 20px;
   fill: #ffffff;
-}
-
-.networks-link:hover {
-  background-color: #2196f3;
 }
 
 /* form-footer */
@@ -284,13 +304,12 @@ address a:focus {
   font-size: 16px;
   line-height: 1.25;
   letter-spacing: 0.03em;
+  /*font-weight: 400;
+  font-size: 16px;
+  line-height: 1.25;
+  letter-spacing: 0.03em;*/
   -webkit-filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
           filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
-}
-
-.subscription {
-  margin: 0;
-  padding: 0;
 }
 
 .email-footer::-webkit-input-placeholder {
@@ -299,6 +318,10 @@ address a:focus {
   font-size: 16px;
   line-height: 1.25;
   letter-spacing: 0.03em;
+  /*font-weight: 400;
+    font-size: 16px;
+    line-height: 1.25;
+    letter-spacing: 0.03em;*/
 }
 
 .email-footer:-ms-input-placeholder {
@@ -307,6 +330,10 @@ address a:focus {
   font-size: 16px;
   line-height: 1.25;
   letter-spacing: 0.03em;
+  /*font-weight: 400;
+    font-size: 16px;
+    line-height: 1.25;
+    letter-spacing: 0.03em;*/
 }
 
 .email-footer::-ms-input-placeholder {
@@ -315,6 +342,10 @@ address a:focus {
   font-size: 16px;
   line-height: 1.25;
   letter-spacing: 0.03em;
+  /*font-weight: 400;
+    font-size: 16px;
+    line-height: 1.25;
+    letter-spacing: 0.03em;*/
 }
 
 .email-footer::placeholder {
@@ -323,6 +354,15 @@ address a:focus {
   font-size: 16px;
   line-height: 1.25;
   letter-spacing: 0.03em;
+  /*font-weight: 400;
+    font-size: 16px;
+    line-height: 1.25;
+    letter-spacing: 0.03em;*/
+}
+
+.subscription {
+  margin: 0;
+  padding: 0;
 }
 
 .button-form-footer {
@@ -348,6 +388,10 @@ address a:focus {
   font-size: 16px;
   line-height: 1.88;
   letter-spacing: 0.06em;
+  /*font-weight: 700;
+  font-size: 16px;
+  line-height: 1.88;
+  letter-spacing: 0.06em;*/
   cursor: pointer;
   -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
           box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
@@ -374,6 +418,10 @@ address a:focus {
   font-size: 44px;
   line-height: 1.36;
   letter-spacing: 0.06em;
+  /* font-weight: 900;
+  font-size: 44px;
+  line-height: 1.36;
+  letter-spacing: 0.06em;*/
   text-align: center;
   text-transform: uppercase;
 }
@@ -398,6 +446,10 @@ address a:focus {
   font-size: 16px;
   line-height: 1.88;
   letter-spacing: 0.06em;
+  /*font-weight: 700;
+  font-size: 16px;
+  line-height: 1.88;
+  letter-spacing: 0.06em;*/
   cursor: pointer;
   -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
           box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
@@ -405,8 +457,7 @@ address a:focus {
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.button-hero:hover,
-.button-hero:focus {
+.button-hero:hover, .button-hero:focus {
   background: #188ce8;
 }
 
@@ -458,6 +509,10 @@ address a:focus {
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.03em;
+  /*font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;*/
   text-transform: uppercase;
 }
 
@@ -470,6 +525,10 @@ address a:focus {
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
+  /*font-weight: 400;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;*/
 }
 
 .preview {
@@ -487,6 +546,10 @@ address a:focus {
   font-size: 36px;
   line-height: 1.16;
   letter-spacing: 0.03em;
+  /*font-weight: 700;
+  font-size: 36px;
+  line-height: 1.16;
+  letter-spacing: 0.03em;*/
   text-align: center;
 }
 
@@ -527,6 +590,10 @@ address a:focus {
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.03em;
+  /*font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;*/
   text-transform: uppercase;
 }
 
@@ -563,6 +630,10 @@ address a:focus {
   font-size: 16px;
   line-height: 1.19;
   letter-spacing: 0.03em;
+  /*font-weight: 500;
+  font-size: 16px;
+  line-height: 1.19;
+  letter-spacing: 0.03em;*/
   text-align: center;
 }
 
@@ -574,6 +645,10 @@ address a:focus {
   font-size: 16px;
   line-height: 1.19;
   letter-spacing: 0.03em;
+  /*font-weight: 400;
+  font-size: 16px;
+  line-height: 1.19;
+  letter-spacing: 0.03em;*/
   text-align: center;
 }
 
@@ -603,6 +678,11 @@ address a:focus {
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.social-networks-link:hover, .social-networks-link:focus {
+  background-color: #2196f3;
+  color: #ffffff;
+}
+
 .social-networks-item:not(:last-child) {
   margin-right: 10px;
 }
@@ -611,12 +691,6 @@ address a:focus {
   width: 20px;
   height: 20px;
   fill: currentColor;
-}
-
-.social-networks-link:hover,
-.social-networks-link:focus {
-  background-color: #2196f3;
-  color: #ffffff;
 }
 
 .clients {
@@ -653,8 +727,7 @@ address a:focus {
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.clients-link:hover,
-.clients-link:focus {
+.clients-link:hover, .clients-link:focus {
   color: #2196f3;
 }
 
@@ -688,14 +761,17 @@ address a:focus {
   font-size: 16px;
   line-height: 1.62;
   letter-spacing: 0.03em;
+  /*font-weight: 500;
+  font-size: 16px;
+  line-height: 1.62;
+  letter-spacing: 0.03em;*/
   text-align: center;
   cursor: pointer;
   -webkit-transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.button:hover,
-.button:focus {
+.button:hover, .button:focus {
   background: #2196f3;
   color: #ffffff;
   -webkit-box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
@@ -742,8 +818,7 @@ address a:focus {
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.portfolio-item .item:hover,
-.portfolio-item .item:focus {
+.portfolio-item .item:hover, .portfolio-item .item:focus {
   -webkit-box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
           box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
@@ -791,6 +866,10 @@ address a:focus {
   font-size: 18px;
   line-height: 1.55;
   letter-spacing: 0.03em;
+  /*font-weight: 400;
+  font-size: 18px;
+  line-height: 1.55;
+  letter-spacing: 0.03em;*/
 }
 
 .portfolio-link:hover .portfolio-overlay,
@@ -807,6 +886,10 @@ address a:focus {
   font-size: 18px;
   line-height: 2;
   letter-spacing: 0.06em;
+  /*font-weight: 700;
+  font-size: 18px;
+  line-height: 2;
+  letter-spacing: 0.06em;*/
 }
 
 .subtitle {
@@ -817,6 +900,10 @@ address a:focus {
   font-size: 16px;
   line-height: 1.88;
   letter-spacing: 0.03em;
+  /*font-weight: 400;
+  font-size: 16px;
+  line-height: 1.88;
+  letter-spacing: 0.03em;*/
 }
 
 .backdrop {
@@ -876,14 +963,13 @@ address a:focus {
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.close {
-  fill: currentColor;
-}
-
-.button-modal:hover,
-.button-modal:focus {
+.button-modal:hover, .button-modal:focus {
   outline: #ffffff00;
   color: #2196f3;
+}
+
+.close {
+  fill: currentColor;
 }
 
 /* form-modal */
@@ -894,8 +980,12 @@ address a:focus {
   font-weight: 700;
   font-size: 20px;
   line-height: 1.15;
-  text-align: center;
   letter-spacing: 0.03em;
+  /*font-weight: 700;
+  font-size: 20px;
+  line-height: 1.15;
+  letter-spacing: 0.03em;*/
+  text-align: center;
 }
 
 .modal-name,
@@ -929,10 +1019,13 @@ address a:focus {
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.input-name:focus,
+.input-name:focus, .input-name:focus, .input-name:focus,
+.input-tel:focus,
+.input-tel:focus,
 .input-tel:focus,
 .input-email:focus,
-.comment:focus {
+.input-email:focus,
+.input-email:focus {
   outline: transparent;
   border: 1px solid #2196f3;
 }
@@ -953,12 +1046,21 @@ address a:focus {
   border-radius: 4px;
 }
 
+.comment:focus {
+  outline: transparent;
+  border: 1px solid #2196f3;
+}
+
 .comment::-webkit-input-placeholder {
   color: rgba(117, 117, 117, 0.5);
   font-weight: 400;
   font-size: 12px;
   line-height: 1.16;
   letter-spacing: 0.01em;
+  /*font-weight: 400;
+    font-size: 12px;
+    line-height: 1.16;
+    letter-spacing: 0.01em;*/
 }
 
 .comment:-ms-input-placeholder {
@@ -967,6 +1069,10 @@ address a:focus {
   font-size: 12px;
   line-height: 1.16;
   letter-spacing: 0.01em;
+  /*font-weight: 400;
+    font-size: 12px;
+    line-height: 1.16;
+    letter-spacing: 0.01em;*/
 }
 
 .comment::-ms-input-placeholder {
@@ -975,6 +1081,10 @@ address a:focus {
   font-size: 12px;
   line-height: 1.16;
   letter-spacing: 0.01em;
+  /*font-weight: 400;
+    font-size: 12px;
+    line-height: 1.16;
+    letter-spacing: 0.01em;*/
 }
 
 .comment::placeholder {
@@ -983,6 +1093,10 @@ address a:focus {
   font-size: 12px;
   line-height: 1.16;
   letter-spacing: 0.01em;
+  /*font-weight: 400;
+    font-size: 12px;
+    line-height: 1.16;
+    letter-spacing: 0.01em;*/
 }
 
 .modal-name span,
@@ -997,6 +1111,10 @@ address a:focus {
   font-size: 12px;
   line-height: 1.17;
   letter-spacing: 0.01em;
+  /*font-weight: 400;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.01em;*/
 }
 
 .modal-agreement span {
@@ -1005,6 +1123,10 @@ address a:focus {
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
+  /*font-weight: 400;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;*/
 }
 
 .contract {
@@ -1063,6 +1185,10 @@ address a:focus {
   font-size: 16px;
   line-height: 1.88;
   letter-spacing: 0.06em;
+  /*font-weight: 700;
+  font-size: 16px;
+  line-height: 1.88;
+  letter-spacing: 0.06em;*/
   color: #ffffff;
   -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
           box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
@@ -1071,8 +1197,7 @@ address a:focus {
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.send:hover,
-.send:focus {
+.send:hover, .send:focus {
   background: #188ce8;
 }
 /*# sourceMappingURL=main.css.map */
