--- a/sass/components/_benefits.scss
+++ b/sass/components/_benefits.scss
@@ -42,10 +42,11 @@
   margin-bottom: 10;
 
   color: $title-text-color;
-  font-weight: 700;
+  @include font-options(700, 14px, 1.14, 0.03em);
+  /*font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
-  letter-spacing: 0.03em;
+  letter-spacing: 0.03em;*/
   text-transform: uppercase;
 }
 
@@ -55,8 +56,9 @@
   width: 270px;
 
   color: $primary-text-color;
-  font-weight: 400;
+  @include font-options(400, 14px, 1.71, 0.03em);
+  /*font-weight: 400;
   font-size: 14px;
   line-height: 1.71;
-  letter-spacing: 0.03em;
+  letter-spacing: 0.03em;*/
 }
