--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -23,11 +23,11 @@
   color: $svg-color;
 
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.clients-link:hover,
-.clients-link:focus {
-  color: $accent-color;
+  &:hover,
+  &:focus {
+    color: $accent-color;
+  }
 }
 
 .clients-icon {
