--- a/sass/components/_command.scss
+++ b/sass/components/_command.scss
@@ -29,10 +29,11 @@
   margin-bottom: 10px;
 
   color: $title-text-color;
-  font-weight: 500;
+  @include font-options(500, 16px, 1.19, 0.03em);
+  /*font-weight: 500;
   font-size: 16px;
   line-height: 1.19;
-  letter-spacing: 0.03em;
+  letter-spacing: 0.03em;*/
   text-align: center;
 }
 
@@ -41,10 +42,11 @@
   margin-bottom: 16px;
 
   color: $primary-text-color;
-  font-weight: 400;
+  @include font-options(400, 16px, 1.19, 0.03em);
+  /*font-weight: 400;
   font-size: 16px;
   line-height: 1.19;
-  letter-spacing: 0.03em;
+  letter-spacing: 0.03em;*/
   text-align: center;
 }
 
@@ -65,6 +67,12 @@
   color: $svg-color;
 
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  &:hover,
+  &:focus {
+    background-color: $accent-color;
+    color: $hero-title-color;
+  }
 }
 
 .social-networks-item:not(:last-child) {
@@ -76,10 +84,4 @@
   height: 20px;
 
   fill: currentColor;
-}
-
-.social-networks-link:hover,
-.social-networks-link:focus {
-  background-color: $accent-color;
-  color: $hero-title-color;
 }
