--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -22,10 +22,11 @@
   margin-bottom: 30px;
 
   color: $hero-title-color;
-  font-weight: 900;
+  @include font-options(900, 44px, 1.36, 0.06em);
+  /* font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
-  letter-spacing: 0.06em;
+  letter-spacing: 0.06em;*/
   text-align: center;
   text-transform: uppercase;
 }
@@ -43,17 +44,18 @@
   background-color: $accent-color;
   color: $hero-title-color;
   font-family: inherit;
-  font-weight: 700;
+  @include font-options(700, 16px, 1.88, 0.06em);
+  /*font-weight: 700;
   font-size: 16px;
   line-height: 1.88;
-  letter-spacing: 0.06em;
+  letter-spacing: 0.06em;*/
   cursor: pointer;
 
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.button-hero:hover,
-.button-hero:focus {
-  background: #188ce8;
+  &:hover,
+  &:focus {
+    background: #188ce8;
+  }
 }
