--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -1,10 +1,11 @@
 .logo {
   color: $accent-color;
-  font-family: Raleway, sans-serif;
-  font-weight: 700;
+  font-family: $logo-font;
+  @include font-options(700, 26px, 1.19, 0.03em);
+  /*font-weight: 700;
   font-size: 26px;
   line-height: 1.19;
-  letter-spacing: 0.03em;
+  letter-spacing: 0.03em;*/
 }
 
 .logo-header {
