--- a/sass/components/_page-footer.scss
+++ b/sass/components/_page-footer.scss
@@ -10,24 +10,27 @@ address {
 
   color: $hero-title-color;
   font-style: normal;
-  font-weight: 400;
+  @include font-options(400, 14px, 1.71, 0.03em);
+  /*font-weight: 400;
   font-size: 14px;
   line-height: 1.71;
-  letter-spacing: 0.03em;
+  letter-spacing: 0.03em;*/
 }
 
 address > a {
   color: $address-color;
+  @include font-options(400, 14px, 1.71, 0.03em);
+  /*font-weight: 400;
   font-size: 14px;
   line-height: 1.71;
-  letter-spacing: 0.03em;
+  letter-spacing: 0.03em;*/
 
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-address a:hover,
-address a:focus {
-  color: $accent-color;
+  &:hover,
+  &:focus {
+    color: $accent-color;
+  }
 }
 
 .mail {
@@ -53,10 +56,11 @@ address a:focus {
   margin-bottom: 20px;
 
   color: $hero-title-color;
-  font-weight: 700;
+  @include font-options(700, 14px, 1.14, 0.03em);
+  /*font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
-  letter-spacing: 0.03em;
+  letter-spacing: 0.03em;*/
   text-transform: uppercase;
 }
 
@@ -79,16 +83,16 @@ address a:focus {
   background-color: rgba(255, 255, 255, 0.1);
 
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  &:hover {
+    background-color: $accent-color;
+  }
 }
 
 .networks-icon {
   width: 20px;
   height: 20px;
   fill: $hero-title-color;
-}
-
-.networks-link:hover {
-  background-color: $accent-color;
 }
 
 /* form-footer */
@@ -107,25 +111,27 @@ address a:focus {
 
   background: $background-footer;
   color: $hero-title-color;
-  font-weight: 400;
+  @include font-options(400, 16px, 1.25, 0.03em);
+  /*font-weight: 400;
   font-size: 16px;
   line-height: 1.25;
-  letter-spacing: 0.03em;
+  letter-spacing: 0.03em;*/
 
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+
+  &::placeholder {
+    color: rgba(255, 255, 255, 0.6);
+    @include font-options(400, 16px, 1.25, 0.03em);
+    /*font-weight: 400;
+    font-size: 16px;
+    line-height: 1.25;
+    letter-spacing: 0.03em;*/
+  }
 }
 
 .subscription {
   margin: 0;
   padding: 0;
-}
-
-.email-footer::placeholder {
-  color: rgba(255, 255, 255, 0.6);
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 1.25;
-  letter-spacing: 0.03em;
 }
 
 .button-form-footer {
@@ -142,10 +148,11 @@ address a:focus {
   background-color: $accent-color;
   color: $hero-title-color;
   font-family: inherit;
-  font-weight: 700;
+  @include font-options(700, 16px, 1.88, 0.06em);
+  /*font-weight: 700;
   font-size: 16px;
   line-height: 1.88;
-  letter-spacing: 0.06em;
+  letter-spacing: 0.06em;*/
   cursor: pointer;
 
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
