--- a/sass/components/_page-header.scss
+++ b/sass/components/_page-header.scss
@@ -19,10 +19,11 @@ header {
   display: flex;
   margin-left: 93px;
 
-  font-weight: 500;
+  @include font-options(500, 14px, 1.14, 0.02em);
+  /*font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
-  letter-spacing: 0.02em;
+  letter-spacing: 0.02em;*/
 }
 
 .site-naw .item:not(:last-child) {
@@ -37,30 +38,30 @@ header {
   color: $title-text-color;
 
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.site-naw .link:hover,
-.site-naw .link:focus,
-.site-naw .link.current {
-  color: $accent-color;
+  &:hover,
+  &:focus,
+  &.current {
+    color: $accent-color;
+  }
 }
 
 .site-naw .link.current {
   position: relative;
-}
 
-.site-naw .link.current::after {
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  content: "";
+  &::after {
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    content: "";
 
-  display: block;
-  width: 100%;
-  height: 4px;
-  border-radius: 2px;
+    display: block;
+    width: 100%;
+    height: 4px;
+    border-radius: 2px;
 
-  background: $accent-color;
+    background: $accent-color;
+  }
 }
 
 /* contacts-header */
@@ -70,10 +71,11 @@ header {
 
   margin-left: auto;
 
-  font-weight: 500;
+  @include font-options(500, 14px, 1.14, 0.02em);
+  /*font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
-  letter-spacing: 0.02em;
+  letter-spacing: 0.02em;*/
 }
 
 .contacts-header .item + .item {
@@ -89,11 +91,11 @@ header {
   color: $primary-text-color;
 
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.contacts:hover,
-.contacts:focus {
-  color: $accent-color;
+  &:hover,
+  &:focus {
+    color: $accent-color;
+  }
 }
 
 .contacts-icon {
