--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,5 +1,6 @@
 @import "./utils/variables";
-/* @import "./base/normalize";*/
+@import "./utils/base";
+@import "./utils/mixin";
 
 @import "./components/page-header";
 @import "./components/logo";
