--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -6,44 +6,5 @@ $address-color: rgba(255, 255, 255, 0.6);
 $svg-color: #afb1b8;
 $background-footer: #2f303a;
 
-.visually-hidden {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  margin: -1px;
-  border: 0;
-  padding: 0;
-
-  white-space: nowrap;
-  clip-path: inset(100%);
-  clip: rect(0 0 0 0);
-  overflow: hidden;
-}
-
-body {
-  color: $primary-text-color;
-  font-family: Roboto, sans-serif;
-}
-ul {
-  padding: 0;
-  margin: 0;
-  list-style: none;
-}
-
-a {
-  text-decoration: none;
-}
-
-img {
-  display: block;
-  max-width: 100%;
-  height: auto;
-}
-
-.container {
-  margin-left: auto;
-  margin-right: auto;
-  padding-left: 15px;
-  padding-right: 15px;
-  width: 1200px;
-}
+$logo-font: Raleway, sans-serif;
+$primary-font: Roboto, sans-serif;
